--- a/GoIT/markup/home/lesson1/css/main.css
+++ b/GoIT/markup/home/lesson1/css/main.css
@@ -9,7 +9,7 @@ body {
 .content {
 	width: 512px;
 	background: #FFF;
-	box-shadow: 0 0 0 2px #D3D3D3
+	box-shadow: 0 0 0 2px #D3D3D3;
 	margin: 0 auto 45px auto;
 	padding: 50px;
   border-bottom: 2px solid black;
