--- a/GoIT/markup/home/lesson1/css/main.css
+++ b/GoIT/markup/home/lesson1/css/main.css
@@ -1,8 +1,6 @@
 body {
 	background: #EEEEEE;
 	font-family: Times
-	left: 50%;
-	margin-left: 25%;
 
 }
 
@@ -47,6 +45,7 @@ p, ul, {
 	text-align: left;
 	font-size: 20px;
 	font-weight: 400;
+	line-height: 30px;
 	padding-left: 55px;
 }
 
