--- a/GoIT/markup/home/lesson3/css/main.css
+++ b/GoIT/markup/home/lesson3/css/main.css
@@ -85,28 +85,36 @@ container {
 
 .side_menu li a {
 	display: block;
-	width: 240px;
+	width: 220px;
 	line-height: 40px;
 	font-size: 13px;
 	color: #656363;
 	text-decoration: none;
-	padding-left: 12px;
+	padding-left: 20px;
 
 }
 
 .side_menu li a:hover {
+	width: 199px;
 	background: #f9f9f9;
 	color: #2c2c2c;
-	padding-left: 24px;
+	padding-left: 39px;
 }
 
 
 
 .main_image {
 	width: 680px;
+	height: 400px;
+	line-height: 400px;
 	border: 1px solid #ccc;
 	text-align: center;
 	float: right;
+
+}
+
+.main_image img {
+	vertical-align: middle;
 
 }
 
