--- a/GoIT/markup/home/lesson3/css/main.css
+++ b/GoIT/markup/home/lesson3/css/main.css
@@ -1,11 +1,11 @@
-/*@font-face {
+@font-face {
   font-family: 'Open Sans';
   src: url("./fonts/Regular/OpenSans-Regular.eot?v=1.1.0");
   src: url("./fonts/Regular/OpenSans-Regular.eot?#iefix&v=1.1.0") format("embedded-opentype"), url("./fonts/Regular/OpenSans-Regular.woff?v=1.1.0") format("woff"), url("./fonts/Regular/OpenSans-Regular.ttf?v=1.1.0") format("truetype"), url("./fonts/Regular/OpenSans-Regular.svg?v=1.1.0#OpenSansBold") format("svg");
   font-weight: normal;
   font-style: normal;
 }
-*/
+
 
 
 body {
@@ -23,7 +23,7 @@ body {
 
 .logo {
 	width: 145px;
-	padding: 0 0 50px;
+    padding: 0 0 50px;
 }
 
 .menu {
@@ -35,19 +35,21 @@ body {
 
 .top_menu li {
 	display: inline-block;
-	line-height: 40px;
+	line-height: 0px;
+	font-size: 0px;
 	font-family: sans-serif;
-	vertical-align: baseline;
-	width: 100px;
+	vertical-align: middle;
 }
 
 .top_menu li a {
 	display: inline-block;
 	color: #FFF;
+	line-height: 40px;
 	font-size: 15px;
 	text-decoration: none;
 	text-shadow: 1px 2px 2px rgba(0, 0, 0, 0.3);
-	width: 100px;
+	padding-left: 20px;
+	padding-right: 20px;
 	text-align: center;
 }
 
